--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
             </ul>
         </nav>
     </header>
-
+    <main>
     <div class="container">
         <aside>
             <img src="alex-pereira.png" alt="Foto Profil" class="profile-photo">
+            <span>
+            <br><br>
+            Nama Lengkap: Alexsandro Pereira
+            <br><br>
+            Nama Panggilan: Poatan (berarti "Tangan Batu" dalam bahasa suku asli Brasil, Tupi-Guarani)
+            <br><br>
+            Tanggal Lahir: 7 Juli 1987
+            <br><br>
+            Tempat Lahir: São Bernardo do Campo, São Paulo, Brasil
+            <br><br>
+            Kewarganegaraan: Brasil
+            </span>
         </aside>
 
         <article>
@@ -32,7 +44,6 @@ Kariernya dimulai di kickboxing, di mana ia menjadi juara dunia dua divisi di Gl
 
 Di luar oktagon, Alex adalah sosok rendah hati yang bangga dengan warisan budaya suku Tupi-Guarani. Perjalanannya, dari buruh hingga juara dunia, menjadi inspirasi bagi banyak orang di seluruh dunia.
             </p>
-
             <h2 id="karir">Karir UFC</h2>
             <ul>
                 <li>Divisi: Middleweight (185 lbs)</li>
@@ -40,7 +51,6 @@ Di luar oktagon, Alex adalah sosok rendah hati yang bangga dengan warisan budaya
                 <li>Gaya Bertarung: Kickboxing dengan spesialisasi dalam striking dan kemampuan knockout yang luar biasa.</li> 
                 <li>Tim: Teixeira MMA & Fitness (dilatih oleh Glover Teixeira, mantan juara Light Heavyweight UFC).</li>
             </ul>
-
             <h2 id="prestasi">Prestasi</h2>
             <b>Kickboxing</b>
             <ol>
@@ -79,7 +89,7 @@ Di luar oktagon, Alex adalah sosok rendah hati yang bangga dengan warisan budaya
            </ol>
         </article>
     </div>
-
+</main>
     <footer>
         <p>&copy; 2024 Arfatian Nanda.</p>
     </footer>
